[package]
name = "zeroclaw-infra"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Channel infrastructure: session backends, debouncing, stall watchdog."
publish = false

[dependencies]
zeroclaw-types = { path = "../zeroclaw-types" }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
parking_lot = "0.12"
portable-atomic = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.50", default-features = false, features = ["sync", "time"] }
tracing = { version = "0.1", default-features = false }
