[package]
name = "zeroclaw-types"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core trait definitions and shared message types for ZeroClaw."
publish = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = "2.0"
tokio = { version = "1.50", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7", default-features = false }
